[package]
name = "wat"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-frozen-abi = { version = "3.0.1", optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { version = "3.1.0" , optional = true, features = [
    "frozen-abi",
] }

[features]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
]
